--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                 <img src="assets/img/icons/scales-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
-                                    <p class="text-20 mb-0 font-medium">
+                                    <p class="text-20 mb-0 font-medium nowrap">
                                         Legal stuff
                                     </p>
                                     <p class="text-blue mb-0">legal@hntsa.com</p>
@@ -312,7 +312,7 @@
                                 <img src="assets/img/icons/building-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
-                                    <p class="text-20 mb-0 font-medium">
+                                    <p class="text-20 mb-0 font-medium nowrap">
                                         Business Development
                                     </p>
                                     <p class="text-blue mb-0">business@hntsa.com</p>
@@ -327,7 +327,7 @@
                                 <img src="assets/img/icons/user.svg" class="mt-2 d-none d-md-block" alt="" srcset="">
                                 <img src="assets/img/icons/user-bg.svg" class="mt-2 d-md-none d-block" alt="" srcset="">
                                 <div class="flex flex-column ms-3">
-                                    <p class="text-20 mb-0 font-medium">
+                                    <p class="text-20 mb-0 font-medium nowrap">
                                         Press inquiries
                                     </p>
                                     <p class="text-blue mb-0">press@hntsa.com</p>
@@ -343,7 +343,7 @@
                                 <img src="assets/img/icons/search-bg.svg" class="mt-2 d-md-none d-block" alt=""
                                     srcset="">
                                 <div class="flex flex-column ms-3">
-                                    <p class="text-20 mb-0 font-medium">
+                                    <p class="text-20 mb-0 font-medium nowrap">
                                         Everything else
                                     </p>
                                     <p class="text-blue mb-0">hello@hntsa.com</p>
