fix slide up animation

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             <div class="d-flex flex-column flex-md-row justify-content-center">
                 <input type="text" class="custom-input" placeholder="Your email address" maxlength="300">
                 <button style="height: 51px;"
-                    class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0"
-                    onclick="alert('Thank you! We&#8217;ll keep you posted!')">
+                    class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0">
                     Sign Up
                 </button>
             </div>
