normalize initial slide up

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="text-center text-out font-bold position-relative">How Not To Suck At<span
                     class="tm">&trade;</span></h1>
             <p class="animate-text text-center color-primary">
-                <span class="slide-text">Chess ♟️</span>
+                <span class="slide-text text-in">Chess ♟️</span>
                 <span class="slide-text">Econ 101 📊</span>
                 <span class="slide-text">Photography 📷</span>
                 <span class="slide-text">Guitar 🎸</span>
