--- a/index.html
+++ b/index.html
@@ -137,99 +137,92 @@
       </div>
     </div>
 
+    <!-- form -->
+    <div class="modal fade" id="form" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content py-2 px-3">
+          <button type="button" class="btn-close dismiss d-block ms-auto my-3 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-body">
+            <form name="HNST-Form">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="mt-3 d-flex flex-column">
+                    <label for="" class="form-label">Your Name</label>
+                    <input type="text" name="name" placeholder="Johnny Appleseed" class="custom-input-rounded" maxlength="300" />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="mt-3 d-flex flex-column">
+                    <label for="" class="form-label">Your Username</label>
+                    <input type="email" name="username" placeholder="YourName@gmail.com" class="custom-input-rounded" maxlength="300" />
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="mt-3 d-flex flex-column">
+                    <label for="" class="form-label">What course topic would you like to teach?</label>
+                    <div class="position-relative custom-select-field mt-3">
+                      <select class="custom-select" name="topic" onchange="selectClick(this)" onclick="selectClick(this)">
+                        <option value="Chess ♟️" disabled selected>Chess ♟️</option>
+                        <option value="Piano 🎹">Piano 🎹</option>
+                        <option value="Blackjack 🃏">Blackjack 🃏</option>
+                        <option value="Bodybuilding 🏋">Bodybuilding 🏋</option>
+                        <option value="Econ 101 📊">Econ 101 📊</option>
+                        <option value="Photography 📷">Photography 📷</option>
+                        <option value="Guitar 🎸">Guitar 🎸</option>
+                        <option value="YouTube ▶️">YouTube ▶️</option>
+                        <option value="Writing ✍️">Writing ✍️</option>
+                        <option value="Speed Reading 📚">Speed Reading 📚</option>
+                        <option value="Personal Finance 💸">Personal Finance 💸</option>
+                        <option value="Software 🧑‍💻">Software 🧑‍💻</option>
+                        <option value="Français 🇫🇷">Français 🇫🇷</option>
+                        <option value="Drawing 🎨">Drawing 🎨</option>
+                        <option value="Copyright Law ⚖️">Copyright Law ⚖️</option>
+                        <option value="Poker 🃏">Poker 🃏</option>
+                        <option value="Filmmaking 🎬">Filmmaking 🎬</option>
+                        <option value="Calculus 📐">Calculus 📐</option>
+                        <option value="Investing 📈">Investing 📈</option>
+                      </select>
+                      <ul class="custom-select-list d-none"></ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="mt-3 d-flex flex-column">
+                    <label for="" class="form-label">Why are you the best person to teach this course?</label>
+                    <textarea name="reason" placeholder="I’m the best person to teach this course because ..." class="custom-input-rounded" id="" cols="30" rows="10" maxlength="300"></textarea>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="mt-3 d-flex flex-column">
+                    <label for="" class="form-label">Do you have a YouTube channel or large social media following?</label>
+                    <textarea
+                      name="social_media"
+                      placeholder="Yeah! I have XYZ subscribers. Here’s the URL to my channel: YouTube.com/c/HowNotToSuckAt"
+                      class="custom-input-rounded"
+                      id=""
+                      cols="30"
+                      rows="10"
+                      maxlength="300"
+                    ></textarea>
+                  </div>
+                </div>
+              </div>
+
+              <button class="button button-primary mt-3 ms-auto d-block">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end form -->
+
     <div class="instructor d-none d-md-block my-5">
       <div class="container">
         <div class="instructor-box">
           <h2 class="text-white text-center">Want to become a course instructor?</h2>
           <br />
           <div class="d-flex justify-content-center">
-            <button class="button button-dark" data-bs-toggle="modal" data-bs-target="#smallForm">Apply Now</button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="smallForm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content py-2 px-3">
-                  <button type="button" class="btn-close dismiss d-block ms-auto my-3 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
-                  <div class="modal-body">
-                    <form name="HNST-Form-Dekstop">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <div class="mt-3 d-flex flex-column">
-                            <label for="" class="form-label">Your Name</label>
-                            <input type="text" name="name" placeholder="Johnny Appleseed" class="custom-input-rounded" maxlength="300" />
-                          </div>
-                        </div>
-                        <div class="col-md-6">
-                          <div class="mt-3 d-flex flex-column">
-                            <label for="" class="form-label">Your Username</label>
-                            <input type="email" name="username" placeholder="YourName@gmail.com" class="custom-input-rounded" maxlength="300" />
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="mt-3 d-flex flex-column">
-                            <label for="" class="form-label">What course topic would you like to teach?</label>
-                            <div class="position-relative custom-select-field mt-3">
-                              <select class="custom-select" name="topic" onchange="selectClick(this)" onclick="selectClick(this)">
-                                <option value="Chess ♟️" disabled selected>Chess ♟️</option>
-                                <option value="Piano 🎹">Piano 🎹</option>
-                                <option value="Blackjack 🃏">Blackjack 🃏</option>
-                                <option value="Bodybuilding 🏋">Bodybuilding 🏋</option>
-                                <option value="Econ 101 📊">Econ 101 📊</option>
-                                <option value="Photography 📷">Photography 📷</option>
-                                <option value="Guitar 🎸">Guitar 🎸</option>
-                                <option value="YouTube ▶️">YouTube ▶️</option>
-                                <option value="Writing ✍️">Writing ✍️</option>
-                                <option value="Speed Reading 📚">Speed Reading 📚</option>
-                                <option value="Personal Finance 💸">Personal Finance 💸</option>
-                                <option value="Software 🧑‍💻">Software 🧑‍💻</option>
-                                <option value="Français 🇫🇷">Français 🇫🇷</option>
-                                <option value="Drawing 🎨">Drawing 🎨</option>
-                                <option value="Copyright Law ⚖️">Copyright Law ⚖️</option>
-                                <option value="Poker 🃏">Poker 🃏</option>
-                                <option value="Filmmaking 🎬">Filmmaking 🎬</option>
-                                <option value="Calculus 📐">Calculus 📐</option>
-                                <option value="Investing 📈">Investing 📈</option>
-                              </select>
-                              <ul class="custom-select-list d-none"></ul>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="mt-3 d-flex flex-column">
-                            <label for="" class="form-label">Why are you the best person to teach this course?</label>
-                            <textarea
-                              name="reason"
-                              placeholder="I’m the best person to teach this course because ..."
-                              class="custom-input-rounded"
-                              id=""
-                              cols="30"
-                              rows="10"
-                              maxlength="300"
-                            ></textarea>
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="mt-3 d-flex flex-column">
-                            <label for="" class="form-label">Do you have a YouTube channel or large social media following?</label>
-                            <textarea
-                              name="social_media"
-                              placeholder="Yeah! I have XYZ subscribers. Here’s the URL to my channel: YouTube.com/c/HowNotToSuckAt"
-                              class="custom-input-rounded"
-                              id=""
-                              cols="30"
-                              rows="10"
-                              maxlength="300"
-                            ></textarea>
-                          </div>
-                        </div>
-                      </div>
-
-                      <button class="button button-primary mt-3 ms-auto d-block">Submit</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <button class="button button-dark" data-bs-toggle="modal" data-bs-target="#form">Apply Now</button>
           </div>
         </div>
       </div>
@@ -327,69 +320,8 @@
         </h2>
         <br />
         <div class="d-flex justify-content-center flex-column">
-          <button class="button button-dark w-fit mx-auto d-block" data-bs-toggle="modal" data-bs-target="#formSmall">Apply Now</button>
+          <button class="button button-dark w-fit mx-auto d-block" data-bs-toggle="modal" data-bs-target="#form">Apply Now</button>
           <!-- Modal -->
-          <div class="modal fade" id="formSmall" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content py-2 px-3">
-                <button type="button" class="btn-close dismiss d-block ms-auto my-3 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
-                <div class="modal-body">
-                  <form name="HNST-Form">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="mt-3 d-flex flex-column">
-                          <label for="" class="form-label">Your Name</label>
-                          <input type="text" name="name" placeholder="Johnny Appleseed" class="custom-input-rounded" maxlength="300" />
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="mt-3 d-flex flex-column">
-                          <label for="" class="form-label">Your Username</label>
-                          <input type="text" name="username" placeholder="YourName@gmail.com" class="custom-input-rounded" maxlength="300" />
-                        </div>
-                      </div>
-                      <div class="col-md-12">
-                        <div class="mt-3 d-flex flex-column">
-                          <label for="" class="form-label">What course topic would you like to teach?</label>
-                          <div class="position-relative custom-select-field mt-3">
-                            <select name="topic" class="custom-select" onchange="selectClick(this)" onclick="selectClick(this)">
-                              <option value="" disabled selected>Chess ♟️</option>
-                              <option value="Piano 🎹">Piano 🎹</option>
-                              <option value="Blackjack 🃏">Blackjack 🃏</option>
-                              <option value="Bodybuilding 🏋">Bodybuilding 🏋</option>
-                            </select>
-                            <ul class="custom-select-list d-none"></ul>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-md-12">
-                        <div class="mt-3 d-flex flex-column">
-                          <label for="" class="form-label">Why are you the best person to teach this course?</label>
-                          <textarea name="reason" placeholder="I’m the best person to teach this course because ..." class="custom-input-rounded" id="" cols="30" rows="10" maxlength="300"></textarea>
-                        </div>
-                      </div>
-                      <div class="col-md-12">
-                        <div class="mt-3 d-flex flex-column">
-                          <label for="" class="form-label">Do you have a YouTube channel or large social media following?</label>
-                          <textarea
-                            name="social_media"
-                            placeholder="Yeah! I have XYZ subscribers. Here’s the URL to my channel: YouTube.com/c/HowNotToSuckAt"
-                            class="custom-input-rounded"
-                            id=""
-                            cols="30"
-                            rows="10"
-                            maxlength="300"
-                          ></textarea>
-                        </div>
-                      </div>
-                    </div>
-
-                    <button class="button button-primary mt-3 ms-auto d-block" type="submit">Submit</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -445,38 +377,10 @@
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbwL5cmtENVqKvrZ6QTYcusFtOq5QoOUx_8GNSdU9cw1wpAo01Yu7HjZNI1xSGckrVTz/exec";
       const form = document.forms["HNST-Form"];
-      const formDekstop = document.forms["HNST-Form-Dekstop"];
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
         const button = form.querySelector("button");
-        button.innerHTML = `<div class="spinner-border text-warning" role="status">
-                              <span class="visually-hidden">Loading...</span>
-                            </div>`;
-        fetch(scriptURL, {
-          method: "POST",
-          body: new FormData(form),
-        })
-          .then((response) => {
-            Swal.fire("Success", "Your Form Was Submitted", "success");
-            button.innerHTML = "Submit";
-            const modal = document.querySelectorAll(".modal");
-            const modalBackdrop = document.querySelectorAll(".modal-backdrop");
-            modal.forEach((m) => {
-              m.style.display = "none";
-              $(m).find(".dismiss").trigger({
-                type: "click",
-              });
-            });
-            modalBackdrop.forEach((m) => {
-              m.classList.remove("show");
-            });
-          })
-          .catch((error) => console.error("Error!", error.message));
-      });
-      formDekstop.addEventListener("submit", (e) => {
-        e.preventDefault();
-        const button = formDekstop.querySelector("button");
         button.innerHTML = `<div class="spinner-border text-warning" role="status">
                               <span class="visually-hidden">Loading...</span>
                             </div>`;
