add required at email

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <br />
         <form name="HNST-Email">
           <div class="d-flex flex-column flex-md-row justify-content-center">
-            <input type="email" name="email" class="custom-input" placeholder="Your email address" maxlength="300" />
+            <input type="email" required name="email" class="custom-input" placeholder="Your email address" maxlength="300" />
             <button style="height: 51px" type="submit" class="button button-primary ms-md-4 align-self-center w-fit d-block mt-3 mt-md-0">Sign Up</button>
           </div>
         </form>
